# comma-lab

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PUBLIC.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF.md  LICENSE  PROGRAM.md  PROMPT.md  README.md  SECURITY.md  SYSTEM_MAP.md  THIRD_PARTY_NOTICES.md  auth_eval_renderer_best.json  justfile  pyproject.toml  report.txt  start.sh
.backups/: postfilter_h64_no_sal_recon_best_int8.pt  postfilter_h64_temp_anneal_best_int8.pt  postfilter_h64_temperature_best_int8.pt  postfilter_smoke_nuclear_h96_temp_best_int8.pt  postfilter_standard_h64_long2500_v3_best_int8.pt  postfilter_standard_h64_v4_best_int8.pt  postfilter_standard_h64_v5_best_int8.pt  postfilter_v1_official_1.51_int8.pt
.omx/: metrics.json  notepad.md  project-memory.json  release_manifest_v0.2.0-rc1.md  tmux-hook.json
.playwright-mcp/: page-2026-04-10T15-52-52-981Z.yml  page-2026-04-10T15-53-03-544Z.yml  page-2026-04-10T15-53-40-307Z.yml  page-2026-04-10T15-53-51-807Z.yml  page-2026-04-10T15-54-04-169Z.yml  page-2026-04-10T15-54-09-597Z.yml  page-2026-04-10T15-56-24-318Z.yml  page-2026-04-10T15-57-12-906Z.yml  page-2026-04-10T16-09-54-129Z.yml  page-2026-04-10T16-10-41-247Z.yml
.ralph/: run_log.md
.tooling/: package-lock.json  package.json
Formula/: tac.rb
configs/: platforms.json  upstream_snapshot.template.json
cuda/: README.md  residual_apply.cu
deploy/: cloud_deploy.py
docs/: 2026-04-07-comprehensive-handoff.md  BATTLE_PLAN.md  BATTLE_PLAN_20260420.md  INDEX_score_aware_sidechannel_thread_20260504.md  README.md  adversarial_council_sweep_20260413.md  agent_policy.md  ai_assisted_inverse_steganalysis_persona_council.md  apogee_intN_single_stream_brotli_DEFERRED_20260504.md  archive_bound_candidate_pipeline.md  archive_byte_profile.md  asymptotic_floor_candidate_inventory.md  av1_roi_roadmap.md  canonical_equations_tour.md  canonical_long_training_infrastructure.md  canonical_subagent_pre_flight_checklist.md  cargo_cult_unwind_methodology.md  challenge_snapshot.md  codex_metric_lrl1_audit_20260504.md  codex_metric_yshift_audit_20260504.md  comma_lab_overview.md  comma_pr_archive_dataset_card.md  compliance_audit.md  contest_compliance_authority.md  contest_state_2026-04-06.md  current_workflow_vs_rule_faithful.md  dashboard_log_parser_gap_20260504.md  endgame_checklist.md  experiment_scheduler_design.md  first_10_experiments.md  full_stack_source_map.md  geometric_mean_analysis.md  grand_council_analysis_20260413.md  hardware_layout.md  lab_methodology.md  lane_methodology.md  low_level_tracks.md  master_gradient_extractor_tour.md  master_gradient_xray_usage.md  meta_engineering_vision.md  (+41 more)
examples/: synthetic_sweep.py
experiments/: .gitignore  __init__.py  alpha_frontier_candidate_screen.py  alpha_geo0_pose_regen.py  alpha_inr_readiness.py  alpha_lossy_repair_budget_planner.py  alpha_mask_candidate_builder.py  alpha_mask_codec_candidate_matrix.py  alpha_mask_residual_planner.py  alpha_primitive_mask_diagnostics.py  alpha_repair_atom_planner.py  analyze_or_build_pr85_qfq4_model_serializer_candidate.py  auth_eval_renderer.py  (+626 more)
runtime-rs/: Cargo.toml  README.md
runtime-rs/crates/hpac-codec/: Cargo.toml
runtime-rs/crates/hpac-codec/src/: lib.rs
runtime-rs/crates/inflate-cli/: Cargo.toml
runtime-rs/crates/inflate-cli/src/: main.rs
runtime-rs/crates/pairset-combo-planner/: Cargo.toml
runtime-rs/crates/pairset-combo-planner/src/: lib.rs  main.rs
runtime-rs/crates/python-ast-indexer/: Cargo.toml
runtime-rs/crates/python-ast-indexer/src/: lib.rs  main.rs
runtime-rs/crates/qma-codec/: Cargo.toml
runtime-rs/crates/qma-codec/src/: lib.rs  main.rs
runtime-rs/crates/qma-codec/tests/: cli.rs
runtime-rs/crates/raw-locality-compare/: Cargo.toml
runtime-rs/crates/raw-locality-compare/src/: lib.rs  main.rs
runtime-rs/crates/raw-writer/: Cargo.toml
runtime-rs/crates/raw-writer/src/: lib.rs
runtime-rs/crates/residual-codec/: Cargo.toml
runtime-rs/crates/residual-codec/src/: lib.rs
runtime-rs/crates/stbm1br-codec/: Cargo.toml
runtime-rs/crates/stbm1br-codec/src/: lib.rs  main.rs
runtime-rs/crates/tac-packet-compiler/: Cargo.toml  README.md
runtime-rs/crates/tac-packet-compiler-wasm/: Cargo.toml
runtime-rs/crates/tac-packet-compiler-wasm/src/: lib.rs
runtime-rs/crates/tac-packet-compiler-wasm/web/: index.html
runtime-rs/crates/tac-packet-compiler/benches/: golden_vector_parity.rs  simd_kernels.rs
runtime-rs/crates/tac-packet-compiler/src/: lib.rs
runtime-rs/crates/tac-packet-compiler/src/conformance/: mod.rs
runtime-rs/crates/tac-packet-compiler/src/custom_binary_container/: mod.rs
runtime-rs/crates/tac-packet-compiler/src/pr101_sidecar_grammar/: centered_delta_uint8.rs  mod.rs  ranked_no_op_sidecar.rs  split_brotli.rs  stubs.rs
runtime-rs/crates/tac-packet-compiler/src/pr103_arithmetic_coding/: latent_hi.rs  latent_hi_hand_optimized.rs  merged_range_stream.rs  mod.rs  stubs.rs
runtime-rs/crates/tac-packet-compiler/src/pr81_quantizr/: fp4_codebook.rs  mod.rs  router_action.rs
runtime-rs/crates/tac-packet-compiler/src/pr84_adaptive_mask/: adaptive_mask_context.rs  mod.rs
runtime-rs/crates/tac-packet-compiler/src/pr91_hpac_grammar/: arithmetic_coder_constriction.rs  mod.rs  qmqh_grammar.rs
runtime-rs/crates/tac-packet-compiler/src/pr92_joint_stream/: mod.rs  rmc.rs
runtime-rs/crates/tac-packet-compiler/src/pr93_pose_codec/: delta_varint.rs  lowpass_luma.rs  mod.rs  qzmb1.rs
runtime-rs/crates/tac-packet-compiler/src/pr97_h3_grammar/: length_prefixed_sections.rs  mod.rs  tile_band_streams.rs
runtime-rs/crates/tac-packet-compiler/src/simd/: centered_delta.rs  hi_byte.rs  mod.rs  rle_of_zeros.rs
runtime-rs/crates/tac-packet-compiler/src/sparse_packet_ir/: arithmetic_coefficients.rs  mod.rs  rle_of_zeros.rs  stubs.rs  temporal_subsampled.rs
runtime-rs/crates/tac-packet-compiler/tests/: golden_vector_parity.rs
runtime-rs/crates/zipwire/: Cargo.toml
runtime-rs/crates/zipwire/src/: lib.rs  main.rs
runtime-rs/crates/zipwire/tests/: golden_vectors.rs
(+39464 files in other folders)
