[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tac"
version = "1.0.0"
description = "Task-Aware Codec: Neural video compression optimized for downstream perception models"
readme = "src/tac/README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Alejandro Pena", email = "adpena@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
mlx = ["mlx>=0.5"]
viz = ["plotly>=5.0"]
notebooks = ["marimo>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
]

[project.scripts]
tac = "tac.cli:main"

[project.urls]
Homepage = "https://github.com/adpena/pact"
Documentation = "https://github.com/adpena/pact#readme"
Repository = "https://github.com/adpena/pact"
Issues = "https://github.com/adpena/pact/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tac = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length handled by formatter
    "RUF002",  # unicode in docstrings is intentional (×, →)
    "RUF059",  # unused unpacking is fine for shape destructuring
    "SIM105",  # try/except/pass is clearer than contextlib.suppress for signals
    "TC003",   # type-checking import optimization not worth the complexity
]

[tool.ruff.lint.per-file-ignores]
"experiments/*.py" = ["E402"]  # sys.path manipulation before imports is necessary

[tool.ruff.lint.isort]
known-first-party = ["tac", "comma_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
markers = [
    "slow: marks tests that load scorer models (deselect with '-m \"not slow\"')",
    "compliance: marks tests that verify upstream scorer compliance",
]
