# `tac-packet-compiler` — Rust native port for `tac.packet_compiler`.
#
# Status (2026-05-11): the 19 committed golden-vector primitives are
# byte-for-byte parity GREEN against the Python oracle. This is not complete
# crate parity: selector/search/decode meta surfaces remain explicit
# scaffolds. See README for the per-function table.
#
# Version v0.2.0-rc1 (LOCAL release tag, 2026-05-11):
#   Per council Q5 verdict (b) (9/10 Shannon/Dykstra/Yousfi/Fridrich/
#   Quantizr/Hotz/Selfcomp/MacKay/Balle): tag the GitHub release first as a
#   reversible artifact; crates.io publish is OPERATOR-GATED and irreversible
#   per crates.io no-unpublish policy. `publish = false` is INTENTIONAL and
#   stays false until operator approves crates.io publish; a future v0.2.0
#   (drop the `-rc1` suffix) is the publish-eligible bump.
#
# Promotion path:
#   1. Python oracle (`src/tac/packet_compiler/`) is the canonical reference.
#   2. Native impl writes against the golden vectors checked in under
#      `src/tac/packet_compiler/golden_vectors/`.
#   3. Parity test (`tests/golden_vector_parity.rs`) compares Rust output
#      byte-for-byte against the committed SHA-256 digests.
#   4. Crate is now `v0.2.0-rc1` (release-candidate) — primitive golden
#      vectors GREEN; meta scaffolds remain fail-closed. `publish = false`
#      retained pending operator approval per CLAUDE.md
#      "Public Disclosure Hygiene".
#
# Source memo: handoff Bottom-line tranche item #7 + "Native-first candidates"
# ordering 1-2 + CLAUDE.md "Deterministic packet compiler" non-negotiable.
# Operator directive 2026-05-11: "production hardened OSS direction" +
# "don't submit the PR yet" (interpreted as: tag locally; don't push remote).
# Council verdicts: N D4 (3-impl tranche LZMA → Brotli → single-tensor AC) +
# council Q5 (b) (tag-first; publish-on-operator-trigger).
#
# Per CLAUDE.md "Rust/Zig is a speed layer, not a license to change semantics":
# Python remains the oracle until native parity is proven on the golden vectors.

[package]
name = "tac-packet-compiler"
version = "0.2.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust native port for tac.packet_compiler with 19 golden-vector primitives byte-for-byte parity GREEN; selector/search/decode meta surfaces remain explicit scaffolds."
homepage = "https://github.com/adpena/comma-lab"
documentation = "https://github.com/adpena/comma-lab#readme"
repository = "https://github.com/adpena/comma-lab"
readme = "README.md"
rust-version = "1.85"
publish = false

[dependencies]
# Range/arithmetic coder — same authors (Bamler Lab) as the Python
# `constriction` package; byte-for-byte uint32 stream parity is the design
# target. License: MIT OR Apache-2.0 OR BSL-1.0.
constriction = "0.4"

# Brotli compressor — pure Rust impl, matches the Python `brotli` package
# wire format. Used by PR101 split-Brotli + PR103 adaptive search.
brotli = "8"

# Brotli decoder companion crate (re-exported but private symbols like
# `BrotliDecompressStream` need a direct dep). Pinned to the version the
# `brotli` 8.x crate links against.
brotli-decompressor = "5"

# liblzma — Rust bindings to the *same* liblzma C library that Python's
# stdlib `lzma` module wraps; RAW LZMA1 (FILTER_LZMA1) bit-stream parity is
# the design target for PR101 centered-delta uint8 latents.
liblzma = "0.4"

# JSON for loading golden vector manifests under tests + diagnostics.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SHA-256 for byte-for-byte parity verification against committed vectors.
sha2 = "0.10"

# Hex encoding for human-readable SHA-256 diff diagnostics.
hex = "0.4"

# ndarray for numpy-equivalent shape semantics (centered-delta uint8 has a
# column-major 2D block; merged range stream has per-tensor shape metadata).
ndarray = "0.16"

# Half-precision float (fp16) — PR101 stores per-column `mins` / `scales` as
# fp16 little-endian and the Python oracle hashes those exact bytes into the
# pre-LZMA payload. We need `half::f16` so the Rust port quantises and
# serialises identically.
half = "2"

[dev-dependencies]
# Property-based round-trip tests once impl lands (encode ∘ decode = id).
proptest = "1"

# Microbenchmarks (e.g. Rust-vs-Python parity-loop throughput).
criterion = { version = "0.6", default-features = false }

[[bench]]
name = "golden_vector_parity"
harness = false
required-features = []

[[bench]]
name = "simd_kernels"
harness = false
required-features = []
